--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,17 @@
-org.gradle.jvmargs=-Xmx2g -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=512m
 android.useAndroidX=true
 kotlin.code.style=official
+kotlin.incremental=false
+org.gradle.parallel=true
+org.gradle.caching=true
 android.nonTransitiveRClass=true
+android.defaults.buildfeatures.resvalues=true
+android.sdk.defaultTargetSdkToCompileSdkIfUnset=false
+android.enableAppCompileTimeRClass=false
+android.usesSdkInManifest.disallowed=false
+android.uniquePackageNames=false
+android.dependency.useConstraints=true
+android.r8.strictFullModeForKeepRules=false
+android.r8.optimizedResourceShrinking=false
+android.builtInKotlin=false
+android.newDsl=false
